# shrimp-backend

./: .gitignore  README.md  main.py  pyproject.toml
api/routes/: router.py
api/routes/v1/: tasks.py
models/: __init__.py  embedding.py  task.py  version.py
services/: json_document_service.py  memory_service.py  task_service.py  version_service.py
shrimp/: main.py
shrimp/api/routes/v1/: json_documents.py
shrimp/db/: database.py
shrimp/models/: audit.py  json_document.py  memory.py  version.py
shrimp/services/: version_service.py
shrimp/tools/: base_tool.py  memory_tools.py
tools/: memory_tools.py  response_format.py  task_tools.py  todo_tools.py
