[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shrimp-server"
version = "0.1.0"
description = "MCP Service for task and memory management"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Nike", email = "weinaike@gmail.com"},
]
keywords = ["mcp", "task-management", "memory-management", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.0",
    "pydantic>=2.0.0",
    "pymongo>=4.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "mcp>=1.0.0",
    "fastmcp>=2.11.3",
]


[project.scripts]
shrimp-server = "shrimp.main:main"

[project.urls]
Homepage = "https://github.com/weinaike/shrimp"
Repository = "https://github.com/weinaike/shrimp.git"

# 配置包发现
[tool.setuptools.packages.find]
where = ["."]
include = ["shrimp*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

